MDL-51595 theme_boost: Fix clipping of large text in labels

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -203,6 +203,7 @@ body:not(.editing)  .sitetopic ul.section {
 }
 
 .section .activity.modtype_label.label {
+    line-height: normal;
     font-weight: normal;
     padding: .2em;
 }
